<resources>
    <string name="app_name">My Application</string>
    <string name="button2">Button</string>
    <string name="button">Button</string>
    <string name="log_iin">Log In</string>
    <string name="register">Register</string>
    <string name="todoo">TODO</string>
    <string name="button1">Log In</string>
    <string name="passwordd">Password</string>
    <string name="username">Username</string>
    <string name="log_inn">Log In</string>
    <string name="textview1">TextView</string>
    <string name="log_in">Log In</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="todo1">TODO</string>
    <string name="todooo">TODO</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="fullname">Fullname</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="todoo1">TODO</string>
    <string name="_1_2_k">1,2 K</string>
    <string name="ragnarokmeternallove_gameindo_guest">#ragnarokmeternallove #gameindo #guest</string>
    <string name="ketika_di_prontera_west_ada_npc_kucing_bernama_tamir_yang_memberikan_sebuah_quest_untuk_pergi_ke_duke_island_lulu_akan_memberi_kita_beberapa_pertanyaan_dan_wajib_banget_untuk_kita_jawab_agar_quest_ini_bisa_berlanjut_dan_selesai_lalu_bagaimana_cara_menjawab_lulu">Ketika di Prontera West, ada NPC kucing bernama Tamir yang memberikan sebuah quest untuk pergi ke Duke Island. Lulu akan memberi kita beberapa pertanyaan dan wajib banget untuk kita jawab agar quest ini bisa berlanjut dan selesai, lalu bagaimana cara menjawab Lulu?</string>
    <string name="publiccc">Public</string>
    <string name="todoo2">TODO</string>
    <string name="todo2">TODO</string>
    <string name="publicc">Public</string>
    <string name="_500">500</string>
    <string name="nanara">Nanara</string>
    <string name="_14_">14</string>
    <string name="genshin_impact">Genshin Impact</string>
    <string name="video">video</string>
    <string name="play">play</string>
    <string name="kristian_antoni">Kristian Antoni</string>
    <string name="save">save</string>
    <string name="share">share</string>
    <string name="love">love\'</string>
    <string name="easy_trick_to_level_up_ar_genshin_impact">Easy Trick to Level Up AR - Genshin Impact</string>
    <string name="angka_2">2</string>
    <string name="_6_m">6 m</string>
    <string name="regnarok_m_eternal_love">Regnarok M Eternal Love</string>
    <string name="public1">Public</string>
    <string name="comment">Comment</string>
    <string name="_8_h">8 h</string>
    <string name="savee">savee</string>
    <string name="redlove">redlove</string>
    <string name="genshinimpact_gameindo_newbie">#genshinimpact #gameindo #newbie</string>
    <string name="share1">share1</string>
    <string name="coment">coment</string>
    <string name="toramonline_meme_badut_indogamer">#toramonline #meme #badut #indogamer</string>
    <string name="_14">14</string>
    <string name="ada_aja_badut">Ada aja badut</string>
    <string name="menu">menu</string>
    <string name="image">image</string>
    <string name="profile1">profile</string>
    <string name="edit">edit</string>
    <string name="foto">foto</string>
    <string name="profilee2">Profile</string>
    <string name="izxel1">[IZxEL]</string>
    <string name="_1m">1m</string>
    <string name="i_ve_been_a_gamer_all_my_life">I\'ve been a gamer all my life.</string>
    <string name="iz2">IZ</string>
    <string name="info_gamer1">Info Gamer</string>
    <string name="timeline1">TimeLine</string>
    <string name="iz1">IZ</string>
    <string name="friends1">Friends</string>
    <string name="toram_online">Toram Online</string>
    <string name="mole">mole</string>
    <string name="among">among</string>
    <string name="game_yang_pernah_dimainkan">Game yang pernah dimainkan</string>
    <string name="among_us">Among US</string>
    <string name="horrorsurvival">#HorrorSurvival</string>
    <string name="mobile_legend_bang_bang">Mobile Legend : Bang Bang</string>
    <string name="tertarik_dengan_jenis_permainan">Tertarik dengan jenis permainan</string>
    <string name="umur">Umur :</string>
    <string name="info_gamer">Info Gamer</string>
    <string name="timeline">TimeLine</string>
    <string name="gender">Gender :</string>
    <string name="profile">profile</string>
    <string name="izxel">[IZxEL]</string>
    <string name="a_rpg">#A-RPG</string>
    <string name="menuu1">menuu</string>
    <string name="fotoo">fotoo</string>
    <string name="profilee">Profile</string>
    <string name="iz">IZ</string>
    <string name="advanture">#Advanture</string>
    <string name="i_ve_been_a_gamer_all_my_lifee">I\'ve been a gamer all my life.</string>
    <string name="todo">TODO</string>
    <string name="buttonn">Button</string>
    <string name="buttonn1">Button</string>
    <string name="secret1">Secret</string>
    <string name="pocky1">Pocky</string>
    <string name="menuu">menuu</string>
    <string name="pinky1">Pinky</string>
    <string name="victor">Victor</string>
    <string name="mandarina1">Mandarina</string>
    <string name="list_friend">List Friend</string>
    <string name="beauty1">Beauty</string>
    <string name="add">add</string>
    <string name="language">Language</string>
    <string name="option">Option</string>
    <string name="timelinee2">Timeline</string>
    <string name="string_timeline2">text</string>
    <string name="stikers">Stikers</string>
    <string name="theme">Theme</string>
    <string name="timeline2">Timeline</string>
    <string name="connection">Connection</string>
    <string name="string_connection">Connection</string>
    <string name="sound">Sound</string>
    <string name="setting_privacy">Setting Privacy</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="media">Media</string>
    <string name="gambar1">gambar</string>
    <string name="string_gambar1">gambar</string>
    <string name="friends">Friends</string>
    <string name="chingu">chingu</string>
    <string name="string_chingu">friend</string>
    <string name="string_string_chingu">chingu</string>
    <string name="chats">Chats</string>
    <string name="chatting">chatting</string>
    <string name="location">Location</string>
    <string name="string_location">Location</string>
    <string name="place">place</string>
    <string name="string_place">Place</string>
    <string name="security">Security</string>
    <string name="string_security">Security</string>
    <string name="safe">safe</string>
    <string name="string_safe">Safe</string>
    <string name="list_community">List Community</string>
    <string name="create_new">Create new</string>
    <string name="join_a_community">Join a community</string>
    <string name="check_in1">Check in</string>
    <string name="korean_town">Korean Town</string>
    <string name="check_in">Check in</string>
    <string name="the_secret">The Secret</string>
    <string name="join">join</string>
    <string name="stitch1">stitch1</string>
    <string name="stitch">stitch</string>
    <string name="list_group1">List Group</string>
    <string name="string_list_group" />
    <string name="list_group">List Group</string>
    <string name="string_list_group1">List Group</string>
    <string name="tiktokers_50">Tiktokers (50)</string>
    <string name="string_tiktokers_50">Tiktokers (50)</string>
    <string name="wanna_one_11">Wanna One (11)</string>
    <string name="bts_1001">BTS (100)</string>
    <string name="string_bts_100" />
    <string name="bts_100">BTS (100)</string>
    <string name="barebears_20">BareBears (20)</string>
    <string name="angka_1">1</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="angka2">angka2</string>
    <string name="chat">Chat</string>
    <string name="who_are_you">who are you?</string>
    <string name="pocky">Pocky</string>
    <string name="andwaeee">andwaeee</string>
    <string name="string_andwaeee">andwaeee</string>
    <string name="oppa">Oppa...</string>
    <string name="dimana">Dimana???</string>
    <string name="string_dimana">Dimana???</string>
    <string name="angka1">angka1</string>
    <string name="secret">Secret</string>
    <string name="wo_you_hua_yao_gen_ni">wo you hua yao gen ni</string>
    <string name="pinky">Pinky</string>
    <string name="mandarina">Mandarina</string>
    <string name="victoria">Victoria</string>
    <string name="kemarin_kan">Kemarin kan...</string>
    <string name="hi_aku_sad_boi">hi aku sad boi</string>
    <string name="angkaa1">angkaa1</string>
    <string name="beauty">Beauty</string>
    <string name="angka5">angka5</string>
    <string name="string_angka5" />
    <string name="hello">Hello</string>
    <string name="tandapanah">tandapanah</string>
    <string name="voice">voice</string>
    <string name="smile">smile</string>
    <string name="pluss">pluss</string>
    <string name="search">Search</string>
    <string name="id1">ID</string>
    <string name="phone_number1">Phone Number</string>
    <string name="name1">Name</string>
    <string name="searching">searching</string>
    <string name="friend_recommendations">Friend Recommendations</string>
    <string name="daniel">Daniel</string>
    <string name="daniel1">Daniel</string>
    <string name="member_of_same_group">Member of same group</string>
    <string name="member_of_same_group1">Member of same group</string>
    <string name="profile2">Profile</string>
    <string name="profile5">Profile</string>
    <string name="profile4">Profile</string>
    <string name="add_friends">Add Friends</string>
    <string name="valie">valie</string>
    <string name="invite_friend_by">Invite Friend by</string>
    <string name="create_post">Create Post</string>
    <string name="game_name1">Game Name</string>
    <string name="saram">saram</string>
    <string name="pesan">pesan</string>
    <string name="call">call</string>
    <string name="phone_number2">Phone Number</string>
    <string name="email">Email</string>
    <string name="fullname1">FullName</string>
    <string name="profile3">Profile</string>
    <string name="list_group2">List Group</string>
    <string name="setting">Setting</string>
    <string name="option2">Option</string>
    <string name="list_community2">List Community</string>
    <string name="chat1">chat1</string>
    <string name="namee1">Name</string>
    <string name="search1">Search</string>
    <string name="invite">invite</string>
    <string name="number_id">number , id</string>
    <string name="password1">password</string>
    <string name="username1">username</string>
    <string name="fullname2">FullName</string>
    <string name="e_mail2">E-Mail</string>
    <string name="phone_number3">Phone Number</string>
    <string name="password5">Password</string>
    <string name="list_friend3">List Friend</string>
    <string name="kanbe">Kanbe</string>
    <string name="lovely">lovely</string>
    <string name="hy_kawan">Hy Kawan</string>
    <string name="halo_david_disini">Halo david disini</string>
    <string name="it_s_really_helpfull">It\'s really helpfull...</string>
    <string name="amazing">Amazing</string>
    <string name="type_comment">Type comment</string>
    <string name="comment1">comment1</string>
    <string name="see_more">see more</string>
    <string name="dj_alok">DJ ALOK</string>
    <string name="david_kw12">David KW12</string>
    <string name="comment2">comment2</string>
    <string name="comment4">comment4</string>
    <string name="comment3">comment3</string>
    <string name="lovely1">lovely1</string>
    <string name="lovely2">lovely2</string>
</resources>